TestCases/invalid-graphs/tex/NotSupportedDrawShapes_1.tex
\begin{tikzpicture}  	  
    \draw (13.5,7) notsupported (1.5cm and 0.7cm);
\end{tikzpicture}
